[package]
name = "ndsd-playback"
version = "0.3.0"
edition = "2024"
description = "A lightweight library in rust for native dsd playback over compatible devices."
license = "Apache-2.0"
repository = "https://github.com/KGAFT/ndsd-playback"
readme = "README.md"
categories = ["multimedia::audio"]
keywords = ["dsd", "alsa", "native", "no-pcm-conversion", "asio"]


[lib]
path = "src/lib.rs"
name = "ndsdplayback"
crate-type = ["rlib"]

[[bin]]
path = "src/main.rs"
name = "testing"

[dependencies]
byteorder = "1.5"
tokio = { version = "1", features = ["full"]}
async-trait = "0.1"


[target.'cfg(target_os = "windows")'.dependencies]
ndsd-asio-sys="0.2"

[target.'cfg(target_os = "linux")'.dependencies]
alsa-sys = "0.2"
crossbeam = "0.8"