[package]
name = "ndsd-playback"
version = "0.4.0"
edition = "2024"
description = "A lightweight library in rust for native dsd playback over compatible devices."
license = "Apache-2.0"
repository = "https://github.com/KGAFT/ndsd-playback"
readme = "README.md"
categories = ["multimedia::audio"]
keywords = ["dsd", "alsa", "native", "no-pcm-conversion", "asio"]

[features]
dstdec = []

[lib]
path = "src/lib.rs"
name = "ndsdplayback"
crate-type = ["rlib"]


[dependencies]
byteorder = "1.5"
tokio = { version = "1", features = ["full"]}
async-trait = "0.1"
atomic_float = "1"

[target.'cfg(target_os = "windows")'.dependencies]
ndsd-asio-sys="0.2"

[target.'cfg(target_os = "linux")'.dependencies]
alsa-sys = "0.2"
crossbeam = "0.8"


[build-dependencies]
cc = "1.2.56"
walkdir = "2"
bindgen = "0.72.1"
parse_cfg = "4"